# yer

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
assets/themes/: dark.color_theme.toml
release/freedesktop/: yer.desktop
src/: constants.rs  id.rs  layer.rs  main.rs  mask.rs  math.rs  preferences.rs  preview.rs  session.rs  theme.rs  ui.rs  undo.rs  viewport.rs
src/layer/: actions.rs  components.rs  mask.rs  sample.rs
src/session/: save.rs
src/ui/: egui_ext.rs  file_dialog.rs  layer.rs  preferences_dialog.rs  preview.rs  theme.rs  toolbar.rs
