# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "yer"
version = "0.1.0"
edition = "2021"
description = "Terrain Generation Toolkit"


# Disable dynamic linking before release
[features]
default = ["fast-compile", "inspector"]
embed-assets = ["dep:bevy_embedded_assets"]
fast-compile = ["bevy/dynamic_linking"]
inspector = ["dep:bevy-inspector-egui"]
release = ["embed-assets"]


[dependencies]
bevy = { version = "0.15.1", features = ["serialize"] }
bevy_common_assets = { version = "0.12.0", features = ["toml"] }
bevy_egui = "0.31"
bevy_embedded_assets = { version = "0.12.0", optional = true }
bevy-inspector-egui = { version = "0.28.1", optional = true }
egui-file-dialog = "0.7.0"
rmp-serde = "1.3"
serde = "1.0"
serde_bytes = "0.11"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v7"] }


[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1


# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"


# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
